--- a/html/css/style.css
+++ b/html/css/style.css
@@ -19,6 +19,7 @@ h2 {
 	font-size: 2rem;
 	color: #254159;
 	margin-bottom: 20px;
+	padding-top: 10px;
 }
 
 h3 {
@@ -31,20 +32,37 @@ h4 {
 	font-size: 1.6rem;
 	color: #254159;
 	margin-bottom: 10px;
+	padding-top: 10px;
 }
 
 p {
 	margin-bottom: 10px;
 	line-height: 1.4;
+	color: #333;
 
 }
 
+ol {
+	margin-left: 30px;
+}
+
+ol li {
+	font-size: 1.4rem;
+	color: #454545
+}
 
 .main-container {
-
-	max-width: 1198px;
+	display: block;
+	width: 100vw;
 	margin: 0 auto;
+}
+
+.container {
+	display: block;
+	float: left;
 	padding: 20px;
+	width: 100%;
+	margin: 0 auto;
 }
 
 header {
@@ -52,10 +70,11 @@ header {
 	float: left;
 	width: 100%;
 	padding: 20px;
-
+	border-bottom: 1px solid #254159;
 }
 
 section {
+	background-color: #fff;
 	display: block;
 	float: left;
 	font-size: 1.5rem;
@@ -68,8 +87,27 @@ section nav {
 	display: block;
 	float: left;
 	width: 30%;
-
 }
+
+nav li {
+	background-color: #efefef;
+	margin: 5px 20px 5px 0px;
+	padding: 10px;
+}
+
+nav li:hover {
+	background-color: #dfdfdf;
+}
+
+nav a {
+	text-decoration: none;
+	color: #254159;
+}
+
+nav a:hover {
+	color: #385874;
+}
+
 
 section article {
 	display: block;
@@ -86,4 +124,14 @@ footer {
 	width: 100%;
 	height: 100%;
 	padding: 20px;
+}
+
+footer p {
+	color: #ffff;
+	font-size: 1.4rem;
+}
+
+footer small {
+	font-size: 80%;
+	display: block;
 }
